@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title US004 - Domain Model

class Organization {
    name
    nif
    website
    phoneNumber
    email
}

class Skill{
    name
    description
}

class HRM{

}

class Collaborator{
    name
    admissionDate
    birthDate
    phoneNumber
    email
    idDocType
    idDocNumber
}

Organization "1" -- "*" Collaborator : "has >"
HRM "1" -- "*" Collaborator : "assigns skills to >"
Collaborator "1" -- "*" Skill : "has >"

@enduml